--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -47,7 +47,7 @@
 					<span class="fas fa-times"></span>
 				</a>
 				<div class="content">
-					<h3>[[${basketProduct.productName}]] |
+					<h3>[[${basketProduct.dtoProduct.productName}]] |
 						[[${basketProduct.shopName}]]</h3>
 				</div>
 			</div>
