--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -16,90 +16,93 @@
 	crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-	<!-- HEADER -->
 
-	<header class="header">
 
-		<a th:href="@{/main}" class="logo"> <img th:src="@{/logo.png}">
-		</a>
-		<nav class="navbar">
-
-			<a th:href="'javascript:setActive();'" th:text="#{discountLabel}"></a>
-			<a th:href="@{/cart}" th:text="#{profile}"></a> <a th:href="@{/cart}"
-				th:text="#{contact}"></a>
-		</nav>
-		<div class="icons">
-			<div class="fas fa-shopping-cart" id="cart-btn"></div>
-		</div>
-
-		<div class="cart-items-container">
-			<div class="cart-item" th:each="basketProduct : ${basketProducts}">
-				<a th:href="@{/removeProduct/main/{id}(id=${basketProduct.id})}">
-					<span class="fas fa-times"></span>
-				</a>
-				<div class="content">
-					<h3>[[${basketProduct.product.productName}]] |
-						[[${basketProduct.shopName}]]</h3>
-				</div>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="#">Start Bootstrap</a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
+				aria-controls="navbarResponsive" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ms-auto">
+					<li class="nav-item"><a class="fas fa-shopping-cart"
+						id="cart-btn" href="#"></a></li>
+					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
+					<li class="cart-items-container">
+						<div class="cart-item" th:each="basketProduct : ${basketProducts}">
+							<a th:href="@{/removeProduct/main/{id}(id=${basketProduct.id})}">
+								<span class="fas fa-times"></span>
+							</a>
+							<div class="content">
+								<h3>[[${basketProduct.product.productName}]] |
+									[[${basketProduct.shopName}]]</h3>
+							</div>
+						</div> <a class="btn btn-primary" th:href="@{/cart}" role="button"
+						th:text="#{basket}"></a>
+					</li>
+					
+					<!--  <li class="discount-container">
+						<form role="form" th:object="${discountValue}"
+							th:action="@{/applyDiscount}" method="get">
+							<label for="customRange1" class="form-label">[[#{discountLabel}]]</label>
+							<input class="form-control-lg" type="number" min="0" max="100"
+								step="1" th:placeholder="#{discountText}"
+								th:field="*{discountValue}" />
+							<button type="submit">ENTER</button>
+						</form>
+					</li>-->
+				</ul>
 			</div>
-			<a class="btn btn-primary" th:href="@{/cart}" role="button"
-				th:text="#{basket}"></a>
 		</div>
+	</nav>
 
-		<div class="discount-container">
-			<form role="form" th:object="${discount}"
-				th:action="@{/applyDiscount}" method="get">
-				<label for="customRange1" class="form-label">[[#{discountLabel}]]</label>
-				<input class="form-control-lg" type="number" min="0" max="100"
-					step="1" th:placeholder="#{discountText}" th:field="*{value}" />
-				<button type="submit">ENTER</button>
-			</form>
+	<section class="products" id="productsPage">
+		<div id="info_container_1">
+			<p class="h5 infoText" th:text="#{shopName}"></p>
+			<p class="h5 infoText" id="shopName" th:text="${shopName}"></p>
 		</div>
+		<div id="info_container_2">
+			<p class="h5 infoText" th:text="#{partName}"></p>
+			<p class="h5 infoText" id="category" th:text="#{${category}}"></p>
+		</div>
+		<div id="product_container">
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<th scope="col" th:text="#{name}" />
+						<th scope="col" th:text="#{price}" />
+						<th scope="col" th:text="#{image}" />
+						<th scope="col" />
 
-	</header>
-
-	<!-- HEADER -->
-	
-	<div id="info_container_1">
-		<p class="h5 infoText" th:text="#{shopName}"></p>
-		<p class="h5 infoText" id="shopName" th:text="${shopName}"></p>
-	</div>
-	<div id="info_container_2">
-		<p class="h5 infoText" th:text="#{partName}"></p>
-		<p class="h5 infoText" id="category" th:text="#{${category}}"></p>
-	</div>
-	<div id="product_container">
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th scope="col" th:text="#{name}" />
-					<th scope="col" th:text="#{price}" />
-					<th scope="col" th:text="#{image}" />
-					<th scope="col" />
-
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="product : ${products}">
-					<td th:text="${product.productName}" />
-					<td th:text="${product.price}" />
-					<td class="w-25"><img th:src="${product.imageUrl}"
-						alt="${product.imageUrl}" class="img-fluid" width=200 height=200 /></td>
-					<td><form action="#" th:action="@{addProduct}" method="post"
-							th:object="${product}">
-							<input type="hidden" th:attr="name='productName'" th:value="${product.productName}" />
-							<input type="hidden" th:attr="name='shopName'"
-								th:value="${product.shopName}" /> <input type="hidden"
-								th:attr="name='category'" th:value="${product.category}" />
-							<button type="submit" value="submit" th:text="#{addBasket}"></button>
-						</form></td>
-				</tr>
-			</tbody>
-		</table>
-		<button onclick="topFunction()" id="myBtn" th:title="#{topGo}">
-			<i class="fas fa-arrow-up"></i>
-		</button>
-	</div>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="product : ${products}">
+						<td th:text="${product.productName}" />
+						<td th:text="${product.price}" />
+						<td class="w-25"><img th:src="${product.imageUrl}"
+							alt="${product.imageUrl}" class="img-fluid" width=200 height=200 /></td>
+						<td><form action="#" th:action="@{addProduct}" method="post"
+								th:object="${product}">
+								<input type="hidden" th:attr="name='productName'"
+									th:value="${product.productName}" /> <input type="hidden"
+									th:attr="name='shopName'" th:value="${product.shopName}" /> <input
+									type="hidden" th:attr="name='category'"
+									th:value="${product.category}" />
+								<button type="submit" value="submit" th:text="#{addBasket}"></button>
+							</form></td>
+					</tr>
+				</tbody>
+			</table>
+			<button onclick="topFunction()" id="myBtn" th:title="#{topGo}">
+				<i class="fas fa-arrow-up"></i>
+			</button>
+		</div>
+	</section>
 	<script type="text/javascript" th:src="@{/js/scrollFunction.js}"></script>
 	<script type="text/javascript" th:src="@{/js/productsFunction.js}"></script>
 	<script th:src="@{/src/bootstrap-input-spinner.js}"></script>
