--- a/src/main/resources/static/navigation.css
+++ b/src/main/resources/static/navigation.css
@@ -1,76 +1,53 @@
-body {
+
+*::after {
 	margin: 0;
 	padding: 0;
-	font-family: poppins;
-	-webkit-background-size: cover;
-	background-size: cover;
-	background-position: center center;
-	background-repeat: no-repeat;
-	height: 100vh;
+	box-sizing: border-box;
 }
 
-a {
-	font-size: 12px;
-	text-transform: uppercase;
-}
-
-.nav-area {
-	background: #262626;
-}
-
-.nav-area:after {
-	content: '';
-	clear: both;
-	display: block;
-}
-
-.nav-area ul {
-	list-style: none;
-	margin: 0;
-}
-
-.nav-area>ul>li {
-	float: left;
-	position: relative;
-}
-
-.nav-area ul li a {
-	text-decoration: none;
-	color: #fff;
-	padding: 15px 20px;
-	display: block;
-}
-
-.nav-area ul li:hover a {
-	background: #34495e;
-}
-
-.nav-area ul ul {
-	position: absolute;
-	padding: 0;
-	min-width: 160px;
-	display: none;
-	top: 100%;
+header {
+	position: fixed;
 	left: 0;
-}
-
-.nav-area ul li:hover>ul {
-	display: block;
-}
-
-.nav-area ul ul li:hover a {
-	background: #262626;
-}
-
-.nav-area ul ul li {
-	position: relative;
-}
-
-.nav-area ul ul ul {
+	right: 0;
 	top: 0;
-	left: 100%;
+	height: 8vh;
+	background-color: #D9E5DE;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
-.nav-area ul ul ul li:hover a {
-	background: #34495e;
+h1 {
+	color: #fff;
+}
+
+.shopping-cart {
+	width: 26% !important;
+	position: absolute;
+	left: 72%;
+	top: 25%;
+	padding:10px 20px;
+}
+
+.shopping-cart-wrapper{
+	overflow-y: auto;
+	max-height: 350px;
+}
+
+.totalPrice {
+	text-align: right;
+	padding: 5%;
+}
+
+.shopping-cart-button {
+	width: 95%;
+	text-align: center;
+	cursor: pointer;
+	background: #B1FFD6;
+	margin: 10px auto;
+	padding: 10px 15px;
+}
+
+.shopping-cart-icon {
+	text-align: right;
 }
