--- a/src/main/resources/static/products.css
+++ b/src/main/resources/static/products.css
@@ -1,6 +1,7 @@
 #product_container {
 	width: 100%;
 	aspect-ratio: 100/29;
+	
 }
 
 .infoText{
@@ -13,6 +14,14 @@
 
 .table tr{
 		text-align: center;
+}
+
+#info_container_1{
+	margin-top: 1000px;
+}
+
+.infoText{
+  display:inline-block;
 }
 
 #myBtn {
