--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -93,24 +93,29 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 																</div>
 															</div>
 														</div>
+
 														<div class="col-md-4 quantity">
-															<div class="input-group quantity-wrapper">
-																<form action="" th:method="patch">
-																	<input type="hidden" name="${_csrf.parameterName}"
-																		value="${_csrf.token}" /> <span
-																		class="input-group-btn"> <a
-																		th:href="@{/quantityChangedMinus/{productId}(productId=${basketProduct.productId})}"
-																		class="btn btn-info">-</a>
+															<form id="quantityForm" th:action="@{/changeQuantity}" th:method="patch">
+																<div class="input-group quantity-wrapper">
+																	<input type="hidden" name="productId"
+																		th:value="${basketProduct.productId}" > <input
+																		type="hidden" th:value="-1" name="quantityValue" disabled="disabled" id="minus-input"> <span
+																		class="input-group-btn">
+																		<button type="submit" value="submit"
+																			class="btn btn-info" id="minus-button">-</button>
 																	</span> <input type="number" name="quantityController"
 																		class="form-control input-number quantity-style"
 																		th:value="${basketProduct.quantity}" min="0">
-																	<span class="input-group-btn"> <a
-																		th:href="@{/quantityChangedPlus/{productId}(productId=${basketProduct.productId})}"
-																		class="btn btn-info">+</a>
+
+																	<input type="hidden" name="quantityValue" th:value="1" id="plus-input" disabled="disabled"> <span
+																		class="input-group-btn">
+																		<button type="submit" value="submit"
+																			class="btn btn-info" id="plus-button">+</button>
 																	</span>
-																</form>
-															</div>
+																</div>
+															</form>
 														</div>
+
 														<div class="col-md-3 price">
 															<span>[[${totalPriceForBasketProduct.get(basketProduct.productId)}]]</span>
 														</div>
@@ -141,7 +146,8 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 								<div class="summary-item">
 									<span class="text">[[#{finalPrice}]]</span><span class="price">[[${finalPrice}]]</span>
 								</div>
-								<form action="#" th:action="@{deleteProducts}" th:method="delete">
+								<form action="#" th:action="@{deleteProducts}"
+									th:method="delete">
 									<button type="submit" value="submit" class="btn btn-danger">[[#{deleteButton}]]</button>
 								</form>
 								<a th:href="@{/main}">
@@ -157,6 +163,7 @@ input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-o
 	</main>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" th:src="@{/js/shoppingCart.js}"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.2/js/bootstrap.min.js"></script>
 </body>
