--- a/src/main/resources/static/navigation.css
+++ b/src/main/resources/static/navigation.css
@@ -86,6 +86,12 @@ h1 {
 	text-align: right;
 }
 
+.product-cart-button {
+	border: none; 
+  color: white; 
+  padding: 12px 16px; 
+}
+
 .shopping-cart-container {
 	border: #B1FFD6 solid 1px;
 	border-top: none;
@@ -99,15 +105,15 @@ h1 {
 	display: none;
 }
 
-.no-empty::after {
-	content: var(--cart-amount );
-	font-size: 25px;
+.shopping-cart-icon .cart-amount{
+	font-size: 40px;
 	width:25px;
 	display: inline-block;
 	text-align: center;
 	position: relative;
 	top:-20px;
 }
+
 
 a{
   text-decoration: none;
