--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -10,7 +10,7 @@
 	crossorigin="anonymous" />
 
 <link rel="stylesheet" th:href="@{/main.css}">
-<link rel="stylesheet" th:href="@{/header.css}">
+<link rel="stylesheet" th:href="@{/navigation.css}">
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
 	integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
@@ -36,10 +36,7 @@
 				width="30" height="20" alt="Submit">
 		</form>
 
-		<div class="icons">
-
-			<div class="fas fa-shopping-cart" id="cart-btn"></div>
-		</div>
+		<div th:replace="fragments/dropdownCart :: dropdown-shopping-cart"></div>
 
 	</header>
 
@@ -69,5 +66,14 @@
 		</div>
 	</section>
 	<script type="text/javascript" th:src="@{/js/mainPageJS.js}"></script>
+	<script type="text/javascript" th:src="@{/js/dropdownCart.js}"></script>
+	<script th:inline="javascript">
+		var amount = [[${basketProducts.size}]];
+		const deleteButton = document.getElementById('delete-button');
+		
+		if(amount===0) deleteButton.setAttribute('disabled', 'disabled');
+		else deleteButton.removeAttribute("disabled");
+		
+	</script>
 </body>
 </html>
