--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -36,7 +36,7 @@
 				width="30" height="20" alt="Submit">
 		</form>
 
-		<div th:replace="fragments/dropdownCart :: dropdown-shopping-cart"></div>
+		<div th:replace="~{fragments/dropdownCart :: dropdown-shopping-cart}"></div>
 
 	</header>
 
