--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -19,26 +19,32 @@
 <body>
 	<header>
 		<div class="main">
-			<span> <a th:href="@{/main}">[[#{mainPage}]]</a></span> <span></span>
-			<span>[[#{discountLabel}]]</span>
+			<span class="main-button"> <a th:href="@{/main}">[[#{mainPage}]]</a></span>
 		</div>
 		<div th:replace="~{fragments/dropdownCart :: dropdown-shopping-cart}"></div>
 	</header>
 
 
+	<section>
+		<div id="info_container_1">
+			<p class="h5 infoText" th:text="#{shopName}"></p>
+			<p class="h5 infoText" id="shopName" th:text="${shopName}"></p>
+		</div>
+		<div id="info_container_2">
+			<p class="h5 infoText" th:text="#{partName}"></p>
+			<p class="h5 infoText" id="category" th:text="#{${category}}"></p>
+		</div>
+		<div id="info_container_3">
+			<form th:action="@{/applyDiscount}" th:method="post">
+				<input class="form-control-lg" type="number" min="0" max="100"
+					step="1" th:placeholder="${discountValue}" th:value="*{discountV}"
+					name="value" /> <input type="hidden" name="currentURL"
+					th:value="${currentURL}" />
+				<button type="submit" value="submit" th:text="#{addBasket}"></button>
+			</form>
+		</div>
+	</section>
 
-	<div id="info_container_1">
-		<p class="h5 infoText" th:text="#{shopName}"></p>
-		<p class="h5 infoText" id="shopName" th:text="${shopName}"></p>
-	</div>
-	<div id="info_container_2">
-		<p class="h5 infoText" th:text="#{partName}"></p>
-		<p class="h5 infoText" id="category" th:text="#{${category}}"></p>
-	</div>
-	<div id="info_container_3">
-		<p class="h5 infoText" th:text="#{discountApplied}"></p>
-		<p class="h5 infoText" id="category" th:text="${discountValue}"></p>
-	</div>
 	<section class="products" id="productsPage">
 		<div id="product_container">
 			<table class="table table-bordered">
@@ -82,6 +88,7 @@
 	</section>
 	<script type="text/javascript" th:src="@{/js/scrollFunction.js}"></script>
 	<script type="text/javascript" th:src="@{/js/dropdownCart.js}"></script>
+	<script type="text/javascript" th:src="@{/js/discount.js}"></script>
 	<script th:inline="javascript">
 		var amount = [[${basketProducts.size}]];
 		const deleteButton = document.getElementById('delete-button');
